# PaddleNLP

examples/leomax/: setup.py
examples/leomax/hello/: hello.py
fast_tokenizer/fast_tokenizer/core/: tokenizer.h
fast_tokenizer/fast_tokenizer/models/: bpe.cc  wordpiece.h
fast_tokenizer/fast_tokenizer/pretokenizers/: pretokenizer.h
fast_tokenizer/fast_tokenizer/pybind/: models.cc  normalizers.cc  pretokenizers.cc
leomax_tokenizer/: CMakeLists.txt  readme.md  run_build_py_lib.sh  setup.py
leomax_tokenizer/cmake/: third_party.cmake
leomax_tokenizer/leomax_tokenizer/: CMakeLists.txt
leomax_tokenizer/leomax_tokenizer/base/: base.h
leomax_tokenizer/leomax_tokenizer/core/: added_vocabulary.cc  added_vocabulary.h  base.h  cache.h
leomax_tokenizer/leomax_tokenizer/models/: bpe.cc  bpe.h  models.h  wordpiece.cc  wordpiece.h
leomax_tokenizer/leomax_tokenizer/normalizers/: bert_normalizer.cc  bert_normalizer.h  normalizer.cc  normalizer.h  unicode_normalizer.cc
leomax_tokenizer/leomax_tokenizer/pretokenizers/: metaspace.cc  metaspace.h  pretokenizer.cc  pretokenizer.h
leomax_tokenizer/leomax_tokenizer/pybind/: pybind.cc  pymodels.cc  pymodels.h  pynormalizer.cc  pynormalizer.h  pypretokenizers.cc  pypretokenizers.h  pytokenizers.cc
leomax_tokenizer/leomax_tokenizer/tokenizers/: ernie_fast_tokenizer.cc  tokenizer.cc  tokenizer.h
leomax_tokenizer/leomax_tokenizer/utils/: unicode_utils.h  utf8.h
leomax_tokenizer/python/: CMakeLists.txt
leomax_tokenizer/python/leomax_tokenizer/: __init__.py  c_wrap.py
leomax_tokenizer/python/tests/: run_test.py
(+10 files in other folders)
